test/rewriter/errors/expr_unsupported_payload.expected
File "expr_unsupported_payload.ml", line 1, characters 35-40:
Error: ppx_yojson: unsupported payload
